--- a/bower.json
+++ b/bower.json
@@ -7,12 +7,12 @@
       "Mark Allen Hall <markallenhall@gmail.com>"
     ],
     "dependencies": {
-        "angular": "~1.0.7",
+        "angular": "1.2",
         "isotope": "~1.2"
     },
     "devDependencies": {
-        "angular-mocks": "~1.0.7",
-        "angular-scenario": "~1.0.7"
+        "angular-mocks": "1.2",
+        "angular-scenario": "1.2"
     },
     "description": "AngularJS directives for Isotope by Metafizzy",
     "keywords": [
